--- a/ElaAdmin-master/index.html
+++ b/ElaAdmin-master/index.html
@@ -139,88 +139,34 @@
                         </label>
                         <!-- <a href="index.html"><i class="menu-icon fa fa-laptop"></i>Dashboard </a>-->
                     </li>
-                    <li class="menu-title">UI elements</li><!-- /.menu-title -->
+                    <li class="menu-title">Menu</li><!-- /.menu-title -->
                     <li class="menu-item-has-children dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false"> <i class="menu-icon fa fa-cogs"></i>Components</a>
+                            aria-expanded="false"> <i class="menu-icon fa fa-cog"></i>Questões</a>
                         <ul class="sub-menu children dropdown-menu">
-                            <li><i class="fa fa-puzzle-piece"></i> <a id="testeChamar">Teste</a></li>
-                            <li><i class="fa fa-id-badge"></i><a href="ui-badges.html">Badges</a></li>
-                            <li><i class="fa fa-bars"></i><a href="ui-tabs.html">Tabs</a></li>
-
-                            <li><i class="fa fa-id-card-o"></i><a href="ui-cards.html">Cards</a></li>
-                            <li><i class="fa fa-exclamation-triangle"></i><a href="ui-alerts.html">Alerts</a></li>
-                            <li><i class="fa fa-spinner"></i><a href="ui-progressbar.html">Progress Bars</a></li>
-                            <li><i class="fa fa-fire"></i><a href="ui-modals.html">Modals</a></li>
-                            <li><i class="fa fa-book"></i><a href="ui-switches.html">Switches</a></li>
-                            <li><i class="fa fa-th"></i><a href="ui-grids.html">Grids</a></li>
-                            <li><i class="fa fa-file-word-o"></i><a href="ui-typgraphy.html">Typography</a></li>
+                            <li><i class="fa fa-check-square"></i> <a id="testeChamar">Selecionar Questões</a></li>
+                            <li><i class="fa  fa-cogs"></i><a href="ui-badges.html">Modificar Gráficos</a></li>
                         </ul>
                     </li>
                     <li class="menu-item-has-children dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false"> <i class="menu-icon fa fa-table"></i>Tables</a>
+                            aria-expanded="false"> <i class="menu-icon fa fa-table"></i>Turmas</a>
                         <ul class="sub-menu children dropdown-menu">
-                            <li><i class="fa fa-table"></i><a href="tables-basic.html">Basic Table</a></li>
-                            <li><i class="fa fa-table"></i><a href="tables-data.html">Data Table</a></li>
+                            <li><i class="fa fa-id-badge"></i><a href="tables-basic.html">Matutino</a></li>
+                            <li><i class="fa fa-id-badge"></i><a href="tables-data.html">Noturno</a></li>
                         </ul>
                     </li>
                     <li class="menu-item-has-children dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false"> <i class="menu-icon fa fa-th"></i>Forms</a>
+                            aria-expanded="false"> <i class="menu-icon fa fa-th"></i>Cursos</a>
                         <ul class="sub-menu children dropdown-menu">
-                            <li><i class="menu-icon fa fa-th"></i><a href="forms-basic.html">Basic Form</a></li>
-                            <li><i class="menu-icon fa fa-th"></i><a href="forms-advanced.html">Advanced Form</a></li>
+                            <li><i class="menu-icon fa fa-plus-square-o"></i><a href="forms-basic.html">Análise e Desenvolvimento de Sistemas</a></li>
+                            <li><i class="menu-icon fa fa-plus-square-o"></i><a href="forms-advanced.html">Desenvolvimento de Software Multiplataforma</a></li>
+                            <li><i class="menu-icon fa fa-plus-square-o"></i><a href="forms-basic.html">Gestão da Produção Industrial</a></li>
+                            <li><i class="menu-icon fa fa-plus-square-o"></i><a href="forms-advanced.html">Gestão de Recursos Humanos</a></li>
                         </ul>
                     </li>
 
-                    <li class="menu-title">Icons</li><!-- /.menu-title -->
-
-                    <li class="menu-item-has-children dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false"> <i class="menu-icon fa fa-tasks"></i>Icons</a>
-                        <ul class="sub-menu children dropdown-menu">
-                            <li><i class="menu-icon fa fa-fort-awesome"></i><a href="font-fontawesome.html">Font
-                                    Awesome</a></li>
-                            <li><i class="menu-icon ti-themify-logo"></i><a href="font-themify.html">Themefy Icons</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="widgets.html"> <i class="menu-icon ti-email"></i>Widgets </a>
-                    </li>
-                    <li class="menu-item-has-children dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false"> <i class="menu-icon fa fa-bar-chart"></i>Charts</a>
-                        <ul class="sub-menu children dropdown-menu">
-                            <li><i class="menu-icon fa fa-line-chart"></i><a href="charts-chartjs.html">Chart JS</a>
-                            </li>
-                            <li><i class="menu-icon fa fa-area-chart"></i><a href="charts-flot.html">Flot Chart</a></li>
-                            <li><i class="menu-icon fa fa-pie-chart"></i><a href="charts-peity.html">Peity Chart</a>
-                            </li>
-                        </ul>
-                    </li>
-
-                    <li class="menu-item-has-children dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false"> <i class="menu-icon fa fa-area-chart"></i>Maps</a>
-                        <ul class="sub-menu children dropdown-menu">
-                            <li><i class="menu-icon fa fa-map-o"></i><a href="maps-gmap.html">Google Maps</a></li>
-                            <li><i class="menu-icon fa fa-street-view"></i><a href="maps-vector.html">Vector Maps</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="menu-title">Extras</li><!-- /.menu-title -->
-                    <li class="menu-item-has-children dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false"> <i class="menu-icon fa fa-glass"></i>Pages</a>
-                        <ul class="sub-menu children dropdown-menu">
-                            <li><i class="menu-icon fa fa-sign-in"></i><a href="page-login.html">Login</a></li>
-                            <li><i class="menu-icon fa fa-sign-in"></i><a href="page-register.html">Register</a></li>
-                            <li><i class="menu-icon fa fa-paper-plane"></i><a href="pages-forget.html">Forget Pass</a>
-                            </li>
-                        </ul>
-                    </li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </nav>
@@ -233,7 +179,7 @@
             <div class="top-left">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="./"><img
-                            src="https://site.fatecfranca.edu.br/images/logo-fatec-franca-enade4.png" alt="Logo"></a>
+                            src="https://site.fatecfranca.edu.br/images/logo-fatec-franca-enade4.png" width="50%" height="50%" alt="Logo"></a>
                     <a class="navbar-brand hidden" href="./"><img src="images/logo2.png" alt="Logo"></a>
                     <a id="menuToggle" class="menutoggle"><i class="fa fa-bars"></i></a>
                 </div>
@@ -250,7 +196,7 @@
             <div class="animated fadeIn">
                 <!-- Widgets  -->
                 <div class="row">
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-6 col-md-6">
                         <div class="card">
                             <div class="card-body">
                                 <div class="stat-widget-five">
@@ -269,7 +215,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-6 col-md-6">
                         <div class="card">
                             <div class="card-body">
                                 <div class="stat-widget-five">
@@ -300,7 +246,7 @@
                         <div class="col-xl-8">
                             <div class="card">
                                 <div class="card-body">
-                                    <h4 class="box-title">Orders </h4>
+                                    <h4 class="box-title">Faça Upload da planilha para gerar gráficos</h4>
                                 </div>
 
                             </div> <!-- /.card -->
@@ -450,7 +396,7 @@
         ];
         var colorBlue = "rgba(4, 73, 203,0.9)";
 
-        var progressBarVar = "";
+        var questionClass = "nenhuma";
         var tableAllAnswerSet = [];//Variável para caso seja tabela e crie gráfico auxiliar
         var tableAllAnswerCounter = [];
         var tableAllAnswer = [];
@@ -462,6 +408,10 @@
             });
 
         function createQuestionGraph(nameGraph, q, graphType) {
+            questionClass = "nenhuma";
+            tableAllAnswerSet = [];//Variável para caso seja tabela e crie gráfico auxiliar
+            tableAllAnswerCounter = [];
+            tableAllAnswer = [];
 
             console.log(nameGraph);
             var insertDiv = document.createElement('div');
@@ -490,29 +440,23 @@
             document.getElementById('divChart').appendChild(insertDiv);
 
             //Decidir como será mostrada os Resultados
-            progressBarVar = "nd";//Tem scopo fora dessa função
+            //questionClass = "nd";//Tem scopo fora dessa função
             var answerSet;//Variável para gráficos tipo Data
             var answerSet;
             var counter;
+            if ((question[q].toLowerCase()).indexOf("escreva algumas linhas") >= 0) {
+                questionClass = "aberta";
+                answerList = answer[q];
+                createTable(nameGraph, answerList);
 
-            if ((question[q].toLowerCase()).indexOf("tempo de moradia") >= 0) {//pegar a questão que está dando problema
-                console.log(setAnswer[q]);
-                var setA = new Array(setAnswer[q].lenght);
-                var ansC = new Array(answerCounter[q].lenght);
-
-                setA = setAnswer[q].slice(0);
-                ansC = answerCounter[q].slice(0);
-
-                setA.sort(function (a, b) { return a - b });
-                for (let i = 0; i < setA.length; i++) {
-                    //teste
-                }
+            } else if ((question[q].toLowerCase()).indexOf("tempo de moradia") >= 0) {//pegar a questão que está dando problema
 
                 let chartDataset = createDataset(setAnswer[q], question[q], answerCounter[q]);
-                progressBarVar = "number";
+                questionClass = "num";
                 createChartjs(nameGraph, chartDataset, 'line');
 
             } else if (setAnswer[q].length < dataQuest.length / 6) {
+                questionClass = "nd";
                 let chartDataset = createDataset(setAnswer[q], question[q], answerCounter[q]);
                 if (graphType.toLowerCase() === "auto") {
                     if (setAnswer[q].length > 4) {
@@ -521,10 +465,10 @@
                         graphType = "pie";
                     }
                 }
-                createChartjs(nameGraph, chartDataset, graphType);
                 if (typeof setAnswer[q][1] === 'number') {
-                    progressBarVar = "number";
+                    questionClass = "num";
                 }
+                createChartjs(nameGraph, chartDataset, graphType);
             } else {
                 answerList = new Array(answer[q].length);
                 if (question[q].indexOf("data") >= 0) {
@@ -549,7 +493,7 @@
                     }
                     let chartDataset = createDataset(answerSet, question[q], counter);
                     createChartjs(nameGraph, chartDataset, "bar");
-                    progressBarVar = "data";
+                    questionClass = "data";
                 } else if (question[q].indexOf("RA") >= 0) {
                     //teste
                     answerList = answer[q];
@@ -570,7 +514,7 @@
             var progressPorcen1 = 0;
             var progressPorcen2 = 0;
 
-            if (progressBarVar === "nd") {
+            if (questionClass === "nd") {
                 var gValue = -1;
                 var mValue = 1000;
                 var gIndice = -1;
@@ -595,7 +539,7 @@
                 textProgressBar2 = `${answerCounter[q][mIndice]} Alunos (${porcentM.toFixed(2)}%)`;
                 progressPorcen1 = porcentG.toFixed(2);
                 progressPorcen2 = porcentM.toFixed(2);
-            } else if (progressBarVar === "data") {
+            } else if (questionClass === "data") {
 
                 var gValue = -1;
                 var mValue = 10000000000000;
@@ -603,7 +547,6 @@
                 var mIndice = -1;
 
                 for (let i = 0; i < counter.length; i++) {
-                    //console.log("teste para ver se entrou no for " + counter[1]);
                     if (Number(counter[i]) > gValue) {
                         gValue = counter[i];
                         gIndice = i;
@@ -621,12 +564,8 @@
 
                 for (let i = 0; i < answerList.length; i++) {
                     sum += Number(answerList[i]);
-                    //console.log(answerList[i]);
                 }
                 media = sum / answerList.length;
-                console.log(answerList.length);
-                console.log(sum);
-                console.log(media);
                 for (let i = 0; i < answerList.length; i++) {
                     if (answerList[i] > media) {
                         countGMedia += 1;
@@ -651,7 +590,7 @@
                 titleProgressBar2 = `${countGMedia} nasceram depois do ano ${media.toFixed(0)}`;
                 textProgressBar2 = `Porcentagem de alunos que nasceu depois do ano da média foi de ${progressPorcen2}%`;
 
-            } else if (progressBarVar === "number") {
+            } else if (questionClass === "num") {
 
                 var gValue = -1;
                 var mValue = 1000;
@@ -700,7 +639,7 @@
                 textProgressBar2 = `Porcentagem de alunos maior que a média foi de ${progressPorcen2}%`;
 
 
-            } else if (progressBarVar === "aux") {
+            } else if (questionClass === "aux") {
                 //tableAllAnswerSet;
                 //tableAllAnswerCounter;
 
@@ -745,7 +684,7 @@
             //var porcentG = answerCounter[q][gIndice] / answer[q].length * 100;
             //var porcentM = answerCounter[q][mIndice] / answer[q].length * 100;
 
-            console.log(progressBarVar);
+            console.log(questionClass);
             var insertDivP1 = document.createElement('div');
             insertDivP1.setAttribute('class', 'progress-box progress-1');
             insertDivP1.innerHTML = `   <h4 class="por-title">${titleProgressBar1}</h4>
@@ -771,7 +710,6 @@
         }
 
         function createTable(nameGraph, answersList) {
-            progressBarVar = "nenhuma"
             //Cria tabela para perguntas que ficam ruins com gráficos                    
             var nameTable = "bootstrapTable" + nameGraph;
             var dataTable = `<table id="${nameTable}" class="table table-striped table-bordered">`;
@@ -787,28 +725,21 @@
             dataTable = dataTable + "<tbody>";
 
             //var tableAllAnswerSet = new Array(1);
-            //console.log(answersList);
 
             for (let i = 0; i < answersList.length; i++) {
                 dataTable = dataTable + `<tr><td>${i + 1}</td><td>${answersList[i]}</td></tr>`;
                 //Caso a resposta for do tipo checker, poderá ser selecionada mais de uma resposta
                 //Contar as respostas repetidas
                 answersList[i] = answersList[i].toString();
-                if (answersList[i].indexOf(",") >= 0) {
-                    progressBarVar = "aux";
+                if (answersList[i].indexOf(",") >= 0 && (questionClass !== "aberta")) {
+                    questionClass = "aux";
                     let charArray = answersList[i].split(",");
-                    //console.log("Entrou no teste da vírgula"+answersList[i]+" # "+i);
-                    //console.log(`tamanho do array ${charArray.length}`)
                     for (let j = 0; j < charArray.length; j++) {
                         if (charArray[j][0] == " ") {
-                            //console.log(charArray[j]);
                             charArray[j] = charArray[j].slice(1);
-                            //console.log(charArray[j]);
                         }
                         tableAllAnswer.push(charArray[j]);
-
                     }
-                    //console.log(charArray) 
                 }
             }
             dataTable = dataTable + "</tbody></table>";
@@ -827,7 +758,7 @@
                 }
             }
 
-            if (progressBarVar === "aux") {
+            if (questionClass === "aux") {
 
                 var insertDivAux = document.createElement('div');
                 insertDivAux.setAttribute('id', `divCanvasAux${nameGraph}`);
@@ -923,7 +854,7 @@
         function correlation() {
             //correlacionar gráficos
         }
-        function createGraphs(q1, q2) {
+        function createGraphs() {
             console.log("hi3");
             (function ($) {
                 //"use strict";
@@ -958,12 +889,12 @@
                 //chart chart-js
                 let nameGraph = "ChartTeste";
 
-                for (let i = 1; i < 71; i++) {
+                for (let i = 1; i < question.length; i++) {
                     createQuestionGraph(nameGraph + i, i, "auto");
                 }
+                //createQuestionGraph(nameGraph + 1, 1, "pie");
                 //createQuestionGraph(nameGraph + 3, 3, "pie");
                 //createQuestionGraph(nameGraph + 4, 4, "pie");
-                //createQuestionGraph(nameGraph + q1, q1, "pie");
                 //createQuestionGraph(nameGraph + 64, 64, "bar");
                 //createQuestionGraph(nameGraph + 1, 1, "pie");
                 //createQuestionGraph(nameGraph + 18, 18, "bar");
@@ -972,6 +903,7 @@
                 //createQuestionGraph(nameGraph + 33, 33, "pie");
                 //createQuestionGraph(nameGraph + 8, 8, "pie");
                 //createQuestionGraph(nameGraph + 16, 16, "bar");
+                //createQuestionGraph(nameGraph + 72, 72, "bar");
 
             }(jQuery));
         }
