--- a/ElaAdmin-master/index.html
+++ b/ElaAdmin-master/index.html
@@ -81,10 +81,11 @@
 
         /*CSS adicionado para o Trabalho do Roland*/
 
-        #facaUpload{
+        #facaUpload {
             color: #41434d;
 
         }
+
         #cardChecker .form-check>input {
             display: inline-block;
             color: #03a9f3;
@@ -175,6 +176,7 @@
                         <ul class="sub-menu children dropdown-menu">
                             <li><i class="fa fa-id-badge"></i><a id="selMatutino">Matutino</a></li>
                             <li><i class="fa fa-id-badge"></i><a id="selNoturno">Noturno</a></li>
+                            <li><i class="fa fa-id-badge"></i><a id="selTodas">Todas as Turmas</a></li>
                         </ul>
                     </li>
                     <li class="menu-item-has-children dropdown">
@@ -189,6 +191,7 @@
                                     Produção Industrial</a></li>
                             <li><i class="menu-icon fa fa-plus-square-o"></i><a href="forms-advanced.html">Gestão de
                                     Recursos Humanos</a></li>
+                            <li><i class="menu-icon fa fa-plus-square-o"></i><a href="forms-advanced.html">Todos os cursos</a></li>
                         </ul>
                     </li>
 
@@ -300,7 +303,7 @@
                         Copyright &copy; 2018 Ela Admin
                     </div>
                     <div class="col-sm-6 text-right">
-                        Designed by <a href="https://colorlib.com">Colorlib</a>
+                        Designed by <a href="https://github.com/Alexandre-Vilefort/ProjetosJS">Alexandre Vilefort</a>
                     </div>
                 </div>
             </div>
@@ -379,6 +382,8 @@
         document
             .getElementById("selMatutino")
             .addEventListener("click", function () {
+                createAnswer();
+                createSetCounter();
                 filterData("Matutino");
                 createGraphs();
             });
@@ -386,7 +391,18 @@
         document
             .getElementById("selNoturno")
             .addEventListener("click", function () {
+                createAnswer();
+                createSetCounter();
                 filterData("Noturno");
+                createGraphs();
+            });
+
+        document
+            .getElementById("selTodas")
+            .addEventListener("click", function () {
+                createAnswer();
+                createSetCounter();
+                //filterData("Matutino");
                 createGraphs();
             });
 
@@ -895,7 +911,7 @@
             console.log("hi3");
             (function ($) {
                 spanTotalPerguntas
-                document.getElementById("spanTotalPerguntas").innerHTML = question.length-1;
+                document.getElementById("spanTotalPerguntas").innerHTML = question.length - 1;
                 document.getElementById("spanTotalAlunos").innerHTML = answer[1].length;
                 document.getElementById('divChart').innerHTML = "";//limpar gráficos
 
