--- a/ElaAdmin-master/index.html
+++ b/ElaAdmin-master/index.html
@@ -183,15 +183,15 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false"> <i class="menu-icon fa fa-th"></i>Cursos</a>
                         <ul class="sub-menu children dropdown-menu">
-                            <li><i class="menu-icon fa fa-plus-square-o"></i><a href="forms-basic.html">Análise e
+                            <li><i class="menu-icon fa fa-plus-square-o"></i><a>Análise e
                                     Desenvolvimento de Sistemas</a></li>
                             <li><i class="menu-icon fa fa-plus-square-o"></i><a
                                     href="forms-advanced.html">Desenvolvimento de Software Multiplataforma</a></li>
-                            <li><i class="menu-icon fa fa-plus-square-o"></i><a href="forms-basic.html">Gestão da
+                            <li><i class="menu-icon fa fa-plus-square-o"></i><a>Gestão da
                                     Produção Industrial</a></li>
-                            <li><i class="menu-icon fa fa-plus-square-o"></i><a href="forms-advanced.html">Gestão de
+                            <li><i class="menu-icon fa fa-plus-square-o"></i><a>Gestão de
                                     Recursos Humanos</a></li>
-                            <li><i class="menu-icon fa fa-plus-square-o"></i><a href="forms-advanced.html">Todos os cursos</a></li>
+                            <li><i class="menu-icon fa fa-plus-square-o"></i><a>Todos os cursos</a></li>
                         </ul>
                     </li>
 
